log
In file included from testThreadPool.c:1:0:
ThreadPool.hpp: In member function ‘void ThreadPool::PopTask(Task&)’:
ThreadPool.hpp:115:10: error: no match for ‘operator=’ (operand types are ‘Task’ and ‘<unresolved overloaded function type>’)
       t_ = task_queue.front;
          ^
ThreadPool.hpp:115:10: note: candidate is:
In file included from testThreadPool.c:1:0:
ThreadPool.hpp:10:7: note: Task& Task::operator=(const Task&)
 class Task
       ^
ThreadPool.hpp:10:7: note:   no known conversion for argument 1 from ‘<unresolved overloaded function type>’ to ‘const Task&’
